deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pythonapp
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
  spec:
    volumes:
    - name:  sqlpvc
      persistentVolumeClaim:
        claimName: sqlpv
    containers:
    - name: pythonapp2
      image:  shahir5890/python2:v1.0.version
      ports:
      - containerPort: 5000
      volumeMounts:
      - name:  sqlpvc
        mountPath:  /data
      resources:
        requests:
          cpu: 215m
          memory: 215Mi
        limits:
          cpu: 512m
          memory: 512Mi
      livenessProbe:
        httpGet:
          path: /home
          port: 5000
        initialDelaySeconds: 20
        periodSeconds: 20
        timeoutSeconds: 20
      readinessProbe:
        httpGet:
          path: /home
          port: 5000
        initialDelaySeconds: 20
        periodSeconds: 20
        timeoutSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pythonappsvc
  namespace: test
spec: 
  type: ClusterIP
  selector: 
    app: python
  ports:
    port: 80
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonappingress
  namespace: test
spec:
  rules:
  - host: home.order
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service: 
            name:  pythonappsvc
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service: 
            name:  pythonappsvc
            port:
              number: 80
