statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: pythonapp
  namespace: test
spec:
  serviceName: "pythonsvcvol"
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: pythonapp
        image: shahir5890/python2:v1.0.version
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 215m
            memory: 215Mi
          limits:
            cpu: 512m
            memory: 512Mi
        volumeMounts:
        - name: pythonvol
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /users
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 20
  volumeClaimTemplates:
  - metadata:
      name: pythonvol
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1 
kind: Service
metadata:
  name:  pythonsvcvol
  namespace: test
spec:
  clusterIP: None
  selector:
    app: python
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: v1 
kind: Service
metadata:
  name:  pythonsvc
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: python
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonappingress
  namespace: test
spec:
  rules:
  - host: home.order
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service: 
            name:  pythonsvc
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service: 
            name:  pythonsvc
            port:
              number: 80
      - path: /services
        pathType: Prefix
        backend:
          service: 
            name:  pythonsvc
            port:
              number: 80
